<resources>
    <string name="app_name">CabusMVP</string>
    <string name="register_as_driver">Register as driver</string>
    <string name="register_as_customer">Register as customer</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user_register_here">New user? Register here</string>
    <string name="forgot_password_click_here">Forgot password? Click here</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="loading_please_wait">Loading... Please wait...</string>
    <string name="phone">Phone</string>
    <string name="title_activity_driver_maps">Map</string>
</resources>
