<?xml version="1.0" encoding="utf-8"?>

<!--
// STEP 37
// Setup the driver login screen
// Step 38 in CustomerLoginActivity.java
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".DriverLoginActivity">

    <ProgressBar
        android:id="@+id/progress_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/progress_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loading_please_wait"
        android:textAlignment="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            app:srcCompat="@mipmap/cabus_logo2_foreground" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:background="@color/colorAccent"
            android:text="@string/login"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:clickable="true"
            android:text="@string/new_user_register_here"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:clickable="true"
            android:text="@string/forgot_password_click_here"
            android:textAlignment="center"
            android:textColor="#3F51B5"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>